style.css
* {
  margin: 0;
  padding: 0;
  font-family: "Lato", sans-serif;
}

html {
  scroll-behavior: smooth;
}

.header {
  display: flex;
  background-color: #fff;
}

.top-nav {
  background-color: #2f3439;
  display: none;
  justify-content: flex-end;
  padding: 12px 10%;
  gap: 20px;
  width: 80%;
}

a {
  text-decoration: none;
}

.top-nav > a {
  color: #fff;
}

.logo {
  display: none;
  margin-right: 35%;
  color: black;
}

.nav {
  display: flex;
  top: 50px;
  left: 0;
  height: 25px;
  padding: 12px 10%;
  justify-content: space-between;
  align-items: center;
}

.nav-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 24px;
}

.menu-list {
  display: none;
  flex-direction: column;
  position: fixed;
  top: 0;
  left: 0;
  width: 70%;
  height: 100vh;
  background-color: #fafafa;
  padding: 10rem 5rem;
  align-items: center;
  gap: 10px;
}

.list {
  text-align: center;
  font-size: 30px;
  border-bottom: 1px #1c1c1c solid;
  width: 90%;
  padding-bottom: 10px;
}

.hamburger {
  position: absolute;
  display: flex;
  margin-top: 5%;
  top: 0;
  flex-direction: column;
  left: 0;
  padding: 5%;
  cursor: pointer;
}

.menu-list.action {
  display: flex;
}

.nav-menu {
  display: flex;
  align-items: center;
  color: black;
  gap: 30px;
}

li {
  list-style: none;
}

.list:nth-child(1) {
  border: 4px solid #ec5242;
  padding: 6px;
}

.list:nth-child(6):hover {
  border: 4px solid #1c1c1c;
  padding: 6px;
  background-color: #ec5242;
  transition: all 0.5s ease-in-out;
}

.list:nth-child(1):hover {
  border: 4px solid #1c1c1c;
  transition: all 0.5s ease-in-out;
  padding: 6px;
}

.bar {
  width: 55px;
  height: 10px;
  background-color: black;
  gap: 10px;
  top: 100px;
  left: 20%;
  margin: 3px;
}

.hamburger.action .ham1 {
  transform: rotate(48deg) translateY(22px);
  transition: all 0.3s ease;
}

.hamburger.action .ham3 {
  transform: rotate(-48deg) translateY(-22px);
  transition: all 0.2s ease;
}

.hamburger.action .ham2 {
  opacity: 0;
  transition: all 0.3s ease;
}

.hamburger.active {
  left: 0;
  text-align: center;
  transition: all 0.3s ease-in-out;
  width: 85%;
  height: 100vh;
  font-size: 30px;
  margin-top: 20px;
}

body {
  background-color: #f5f7fb;
}

.hero {
  display: flex;
  flex-direction: column;
  padding-top: 90px;
}

.title {
  font-size: 25px;
  font-weight: 800;
  padding: 0 5%;
  color: orangered;
  text-align: center;
}

.hello-txt {
  margin-top: 20px;
  text-align: center;
  font-size: 19px;
  font-weight: 500;
  padding: 10px 5%;
  color: orangered;
}

.top-txt {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.p1 {
  margin: 5%;
  padding: 5px;
  line-height: 24px;
  font-size: 17px;
  font-weight: 400;
  border: 3px solid #fdfdfd;
}

.p2 {
  margin: 5%;
  padding: 5px;
  line-height: 24px;
  text-align: center;
  font-size: 17px;
  font-weight: 400;
  border: 3px solid #b2b0b0;
}

.date {
  padding: 5%;
  font-size: 27px;
  font-weight: 800;
}

.location {
  padding: 0 5%;
  font-size: 18px;
  font-weight: 500;
  color: #21272d;
}

.address {
  text-align: center;
  padding: 2% 5%;
  font-size: 18px;
  font-weight: 500;
  color: #21272d;
}

/* Main Program Section */

.main-program {
  margin-top: 40px;
  background-color: rgb(30, 35, 35);
  justify-content: center;
  display: flex;
  flex-direction: column;
}

.program {
  display: flex;
  gap: 10px;
  margin: 15px;
  padding: 5px;
  align-items: center;
  background-color: #3c3f46;
}

.orange-line {
  width: 10%;
  height: 3px;
  align-self: center;
  background-color: orangered;
}

.prg-header {
  display: flex;
  justify-content: center;
  color: #fff;
  line-height: 40px;
}

.prg-title {
  color: orangered;
  align-self: center;
}

.prg-text {
  color: #fff;
  font-size: 15px;
  text-align: right;
  width: 80%;
}

.join-btn {
  display: flex;
  align-content: center;
  align-self: center;
  font-size: 20px;
  margin: 20px;
  background-color: orangered;
  padding: 24px 20%;
  color: #fff;
}

/* Featured Section */
.featured {
  display: flex;
  flex-direction: column;
  padding: 5%;
  align-content: center;
  overflow: hidden;
}

.feature-header {
  display: flex;
  align-self: center;
  margin-bottom: 5px;
}

.speaker1 {
  display: flex;
  flex-wrap: wrap;
}

.speaker {
  display: flex;
  margin-top: 1rem;
  width: 90%;
  flex-grow: 1;
}

.hide {
  display: none;
}

.hide.bactive {
  display: flex;
}

.more.active {
  transition: all 0.3s ease;
}

.speaker-detals {
  width: 50%;
}

.aboutspeaker {
  color: #e36f10;
}

.potrait {
  width: 30%;
  margin-right: 10px;
}

.more-speakers {
  display: flex;
  justify-content: center;
  font-size: 18px;
  text-align: center;
}

.more {
  display: flex;
  justify-content: center;
  align-self: center;
  width: 100%;
  height: 3rem;
  margin: 0 12px 5px 12px;
  padding: 5px 2rem;
}

.fa-solid {
  color: orangered;
}

.theme {
  display: flex;
  justify-content: center;
  background-color: #fff;
}

.webinar-theme {
  display: flex;
  padding: 5%;
  align-items: center;
  text-align: center;
}

.webinar-logo {
  display: flex;
  flex-direction: column;
  justify-items: center;
  border: #757678 3px solid;
  margin: 10%;
}

.logo2 {
  padding: 5% 5% 0;
}

.details {
  padding: 0 5% 5%;
  color: #979696;
  font-size: 13px;
}

.past-webinar {
  display: flex;
  flex-direction: column;
  border-top: #48494b 2px solid;
  justify-content: center;
  gap: 10px;
}

.see-past {
  text-align: center;
  padding: 5% 5% 0;
}

.see-details {
  text-align: center;
  padding: 0 5% 5%;
  color: #fff;
  font-size: 20px;
}

.see-photo {
  display: flex;
  width: 80%;
  align-self: center;
  padding: 5%;
}

.see-pix {
  background-image:

    linear-gradient(
      to bottom,
      rgba(249, 52, 52, 0.5),
      rgba(249, 52, 52, 0.5)
    ),
    url(./images/zoom.jpeg);
  background-repeat: no-repeat;
  width: 300px;
  height: 190px;
  padding: 0;
  border: 0;
  margin: 5%;
}

.see-pix2 {
  align-self: center;
  background-image:
    linear-gradient(
      to bottom,
      rgba(249, 52, 52, 0.5),
      rgba(249, 52, 52, 0.5)
    ),
    url(./images/zoom2.jpeg);
  background-repeat: no-repeat;
  width: 300px;
  height: 190px;
  padding: 0;
  border: 0;
  margin: 0;
}

.prev {
  display: flex;
  justify-content: center;
  padding: 50px 0 0;
  font-size: 27px;
  font-weight: 600;
  color: #fff;
}

.desktop {
  display: none;
}

.dsk {
  display: none;
}

.partner {
  padding: 0 5%;
  text-align: center;
  border-bottom: #e36f10 2px solid;
}

.partners {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #21272d;
  color: #fff;
  height: 100%;
  gap: 25px;
  padding-bottom: 5%;
}

.partner2 {
  display: none;
}

.partner-list {
  display: flex;
  gap: 40px;
}

.partner-list2 {
  display: flex;
  gap: 40px;
}

.footer {
  display: flex;
  padding: 5%;
  justify-content: space-around;
  align-items: center;
  background-color: #1c1c1c;
  color: #fff;
}

.pix {
  display: flex;
  flex-direction: column;
  align-self: center;
}

.see-more {
  display: none;
  justify-content: center;
  color: #fff;
  text-align: center;
  font-size: 20px;
  margin: 15px 0 2px 4px;
}

#see-prg {
  display: none;
  width: 30%;
  height: 1px;
  background-color: #fff;
  align-self: center;
  margin-bottom: 30px;
}

.speaker2 {
  display: none;
}

.all-speakers {
  display: flex;
}

/* media Querry */

@media (min-width: 767px) {
  .speaker {
    display: flex;
    margin-top: 3rem;
    width: 40%;
    flex-grow: 1;
  }

  .top-nav {
    display: flex;
  }

  .see-more,
  #see-prg {
    display: flex;
  }

  .nav {
    display: flex;
    background-color: #fff;
    top: 50px;
    left: 0;
    height: 25px;
    padding: 12px 10%;
    justify-content: space-between;
    align-items: center;
  }

  .logo {
    display: block;
  }

  .menu-list {
    display: none;
    flex-direction: row;
    position: inherit;
    top: 0;
    left: 0;
    width: 100%;
    height: auto;
    background-color: rgb(255, 255, 255);
    padding: 0;
    align-items: center;
    padding-right: 40px;
    gap: 15px;
  }

  .nav-menu > .menu-list {
    display: flex;
    padding-right: 5px;
  }

  .list {
    text-align: center;
    font-size: 20px;
    border-bottom: none;
    width: 90%;
    padding-bottom: 10px;
    gap: 20px;
  }

  .hamburger {
    display: none;
  }

  .hello-txt {
    margin-top: 20%;
    text-align: left;
    font-size: 30px;
    font-weight: 500;
    padding: 10px 5%;
    color: orangered;
  }

  .title {
    font-size: 60px;
    font-weight: 800;
    padding: 0 5%;
    width: 80%;
    color: orangered;
    text-align: left;
    line-height: 3.5rem;
  }

  .prg-title {
    text-align: justify;
    color: orangered;
  }

  .fa-regular {
    color: #e36f10;
    font-size: 30px;
  }

  .p1 {
    width: 80%;
    padding: 2% 4px;
    font-size: 20px;
  }

  .date {
    padding: 0 5% 0;
    font-size: 40px;
  }

  .desktop {
    display: flex;
  }

  .main-program {
    margin-top: 40px;
    background-color: rgb(30, 35, 35);
    justify-content: center;
    display: flex;
    flex-direction: column;
  }

  .program {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 16px;
    padding: 16px;
    align-self: center;
    background-color: #3c3f46;
  }

  .prg-header {
    display: flex;
  }

  .black-area {
    display: flex;
  }

  .join-btn {
    display: none;
  }

  .speaker2 {
    display: flex;
    flex-direction: column;
  }

  .partner2 {
    display: flex;
  }

  .dsk {
    display: flex;
    padding: 5%;
    justify-content: space-around;
    align-items: center;
  }

  .more-speakers {
    display: none;
  }

  .pix {
    display: flex;
    flex-direction: row;
    align-items: center;
  }
}

